<?xml version="1.0"?>
<package format="3">
  <name>mavtech_filter</name>
  <version>0.1.0</version>
  <description>Modular ESEKF state estimator for quadrotor odometry fusion in NED frame.</description>
  <maintainer email="user@example.com">MavTech</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
